NOJIRA: Implemented tailwind themer w/ example themes.

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,9 +1,2 @@
-/* Base */
-@import 'tailwindcss/base';
 @import './base.css';
-
-/* Components */
-@import 'tailwindcss/components';
-
-/* Utilties */
-@import 'tailwindcss/utilities';
+@import './themes.css';
