--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @layer base {
   html {
     -webkit-font-smoothing: antialiased;
@@ -5,7 +9,9 @@
   }
 
   body {
+    @apply font-sans;
     @apply text-base;
+    @apply text-black;
   }
 
   /*
