--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -33,3 +33,14 @@
     padding: 1em;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  body:not(.light) {
+    @apply text-light-gray;
+  }
+}
+@media (prefers-color-scheme: light) {
+  body.dark {
+    @apply text-light-gray;
+  }
+}
