NOJIRA: This commit resolves some merge conflicts in the NOJIRA-tailwind-themer pull request.

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -37,10 +37,14 @@
 @media (prefers-color-scheme: dark) {
   body:not(.light) {
     @apply text-light-gray;
+
+    background-color: #1b1c1d;
   }
 }
 @media (prefers-color-scheme: light) {
   body.dark {
     @apply text-light-gray;
+
+    background-color: #1b1c1d;
   }
 }
